tools/benchmarks: Fix failures in image decoding measurements.

The test page uses requestAnimationFrames as a signal to rely on an
image decode completing after it has been painted by blink, which is
precisely what checker-imaging would avoid, i.e., blocking pushing
frames from blink on an image decode.

Since these tests solely want to measure the decode performance,
disable the feature for them.

BUG=736793
R=piman@chromium.org,nednguyen@google.com
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2960933002
Cr-Commit-Position: refs/heads/master@{#483254}

Former-commit-id: 83e99d0e9ce163a5b78e67d17768ed9034721ef4