cc/base/switches.h
@@ -21,6 +21,7 @@ CC_BASE_EXPORT extern const char kDisableCompositedAntialiasing[];
 CC_BASE_EXPORT extern const char kDisableMainFrameBeforeActivation[];
 CC_BASE_EXPORT extern const char kEnableMainFrameBeforeActivation[];
 CC_BASE_EXPORT extern const char kEnableCheckerImaging[];
+CC_BASE_EXPORT extern const char kDisableCheckerImaging[];
 CC_BASE_EXPORT extern const char kBrowserControlsHideThreshold[];
 CC_BASE_EXPORT extern const char kBrowserControlsShowThreshold[];
 CC_BASE_EXPORT extern const char kSlowDownRasterScaleFactor[];
